# fyp-sfml-game

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md
Project Documents/: Olawole-A-O-Game-Design-Document.doc  Olawole-A-O-Project-Report.docx  Olawole-A-O-Technical-Design-Document.doc  ~$awole-A-O-Technical-Design-Document.doc
automation/scripts/: generate-doxygen.ps1  list-undocumented-cpp.ps1  list-undocumented-headers.ps1
project-rival/: .gitignore  ArriveBehaviour.cpp  Chest.cpp  Chest.h  Collision.cpp  Collision.h  CombatRoom.cpp  CombatRoom.h  CustomSprite.cpp  CustomSprite.h  DamageTrigger.cpp  DamageTrigger.h  DungeonPlan.h  Enemy.cpp  Enemy.h  EnemyWeapon.cpp  EnemyWeapon.h  FloorBlueprint.h  FloorGenerator.cpp  FloorLayout.cpp  FloorLayout.h  Game.cpp  Game.h  Gamepad.cpp  Gamepad.h  GruntEnemy.cpp  GruntEnemy.h  HubShop.h  InputManager.cpp  InputManager.h  LLMService.cpp  LLMService.h  MenuUI.cpp  MenuUI.h  NPC.cpp  NPC.h  NormalBulletProjectile.cpp  NormalBulletProjectile.h  Pickup.cpp  Pickup.h  (+29 more)
project-rival/automation scripts/: staged-dump.ps1
project-rival/docs/: DEVELOPMENT_LOG.md  README.md  TechnicalDesignDocument.docx
project-rival/project-rival/: ArriveBehaviour.h  Collision.cpp  Collision.h  CombatRoom.cpp  CombatRoom.h  DungeonPlan.h  Enemy.cpp  Enemy.h  FloorGenerator.cpp  FloorGenerator.h  FloorLayout.cpp  Game.cpp  Game.h  Gamepad.cpp  Gamepad.h  GruntEnemy.cpp  GruntEnemy.h  NormalBulletProjectile.cpp  NormalBulletProjectile.h  PortalRoom.cpp  PortalRoom.h  Projectile.cpp  Projectile.h  RoomBlueprint.h  RoomDoorUtils.h  RoomInstance.cpp  RoomInstance.h  SeekBehaviour.cpp  SeekBehaviour.h  SpawnRoom.cpp  SpawnRoom.h  StaticCollision.cpp  Steering.h  TurretEnemy.cpp  TurretEnemy.h  player.cpp  player.h  (+2 more)
(+765 files in other folders)
